old java friendly